schema/testdata/validation_relationships_one_to_one_no_unique_attr/schema.keel
model User {
    fields {
        student Student @relation(user)
    }
}

model Student {
    fields {
        user User @relation(student)
    }
}
